# mrw

./: CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix
app/cli/: main.c
app/gui/: app.cpp  app.hpp  audio.cpp  audio.hpp  cwio.hpp  cwio_cpp.cpp  main.cpp  media.cpp  media.hpp  miniaudio_impl.c
docs/: ARCHITECTURE.md
include/morse/: cw.h  decode.h  detect.h  encode.h  fft.h  filter.h  morse.h  multi.h  synth.h  table.h  timing.h  types.h  wav.h
src/: cw.c  decode.c  detect.c  encode.c  fft.c  filter.c  morse.c  morse_alloc.c  morse_alloc.h  multi.c  synth.c  table.c  timing.c  types.c  wav.c
tests/: test_cw.c  test_encode_decode.c  test_fft_tone.c  test_filter.c  test_multi.c  test_roundtrip.c  test_squelch.c  test_synth_detect.c  test_table.c  test_timing.c  test_util.h
